<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/demo1"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/style"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/choose_activity"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/style"
        app:layout_constraintVertical_bias="0.0" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/btn1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/black"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="visible"
        app:lottie_rawRes="@raw/naruto"
        android:background="@drawable/rect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.171" />

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/wallpaper"
        android:textColor="#A37D0B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/btn2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="visible"
        app:lottie_rawRes="@raw/quote"
        android:background="@drawable/rect"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:backgroundTint="#301B49"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />


    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/news"
        android:textSize="20sp"
        android:textColor="#081245"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/btn3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="visible"
        app:lottie_rawRes="@raw/news"
        android:backgroundTint="#12394A"
        android:background="@drawable/rect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.489" />


    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/qoutes"
        android:textColor="#2D1F45"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.148" />


    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/logout"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:text="@string/log_out"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>